# vdataplane

./: Cargo.toml  Dockerfile  Prerequisites.md  README.md  deploy_docker.sh  memring.rs.old  test.sh  veth.md
dpdk-ffi/: Cargo.toml  build.rs
dpdk-ffi/src/: lib.rs  shim.c
dpdk-sys/: Cargo.toml  build.rs  build.rs.v2  pkg_names.py  pkg_names.sh
dpdk-sys/src/: bindings.h  bindings_rustdoc.rs  shim.c
go_docker/: Dockerfile  deploy.sh  main.go
go_docker/log/: data.txt
helper_scripts/: no_hyperthread.sh  prereq.py
l3engine/: Cargo.toml
l3engine/src/: clients.rs  main.rs
l3engine/src/apis/: mbuf.rs  mempool.rs  memring.rs  memzone.rs  mod.rs  port.rs
l3engine/src/net/: ipv4hdr.rs  mac.rs  mod.rs
l3enginelib/: Cargo.toml
l3enginelib/src/: bin.rs  ipc.rs  lib.rs  main.rs  process.rs  rxbin.rs  server.rs  txbin.rs
l3enginelib/src/apis/: mbuf.rs  mempool.rs  memring.rs  memzone.rs  mod.rs  port.rs
l3enginelib/src/net/: ipv4hdr.rs  mac.rs  mod.rs
l3enginemux/: Cargo.toml
l3enginemux/src/: main.rs
l3enginemux/src/mux/: fivetuple.rs  mod.rs
l3enginepacketiser/: Cargo.toml
l3enginepacketiser/src/: main.rs
l3enginepacketiser/src/gatekeeper/: mod.rs
l3enginepacketiser/src/net/: device.rs  icmp.rs  mod.rs  tcp.rs
l3enginepacketiser/src/packetiser/: mod.rs
l3nfs/: Cargo.toml
l3nfs/basic_monitor/: Cargo.toml
l3nfs/basic_monitor/src/: main.rs
memenpsf/: Cargo.toml  README.md
memenpsf/examples/ipc-client/: Cargo.toml
memenpsf/examples/ipc-container/: Dockerfile  deploy.sh
memenpsf/examples/ipc-container/fdpass-rs/: Cargo.toml
memenpsf/examples/ipc-container/fdpass-rs/src/: lib.rs
memenpsf/examples/ipc-container/ipc-client/: Cargo.toml
memenpsf/examples/ipc-container/ipc-client/src/: main.rs
memenpsf/examples/ipc-container/ipc-queue/src/: lib.rs
memenpsf/examples/ipc-container/memenpsf/: Cargo.toml
memenpsf/examples/ipc-container/memenpsf/src/: lib.rs
memenpsf/examples/ipc-server/: Cargo.toml
memenpsf/examples/ipc-server/src/: main.rs
memenpsf/fdpass-rs/src/: ffi.rs
memenpsf/ipc-queue/src/: lib.rs
memenpsf/memenpsf/: Cargo.toml
memenpsf/memenpsf/src/: lib.rs
memenpsf/src/: lib.rs
speed-tester/: Cargo.toml
tests/: raw_packets.py
