[package]
name = "l3enginelib"
version = "0.2.0"
authors = ["ratnadeepb <ratnadeep.bhattacharya1983@gmail.com>"]
edition = "2018"
license = "Mozilla-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[lib]
name = "l3enginelib"
path = "src/lib.rs"

[[bin]]
name = "l3enginebin"
path = "src/main.rs"

[dependencies]
dpdk-sys = { version = "0.1.0", path = "../dpdk-sys" }
memenpsf = { version = "0.1.0", path = "../memenpsf/memenpsf" }
anyhow = "1.0.36"
thiserror = "1.0.22"
libc = "0.2.81"
state = "0.4.2"
log = "0.4.11"
ctrlc = "3.1.7"
crossbeam = "0.8.0"
bincode = "1.3.2"
serde = { version = "1.0.124", features = ["derive"] }
rand = "0.8.3"
chashmap = "2.2.2"
rayon = "1.5.0"
tokio = { version = "1.2.0", features = ["full"]}
async-std = "1.9.0"