[package]
name = "speed-tester"
version = "0.1.0"
authors = ["Ratnadeep Bhattacharya <bhattacharya.ratnadeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
l3enginelib = { version = "0.1.0", path = "../l3enginelib" }
dpdk-sys = { version = "0.1.0", path = "../dpdk-sys" }
log = "0.4.11"
crossbeam-queue = "0.3.1"