[package]
name = "ipc-server"
version = "0.1.0"
authors = ["Ratnadeep Bhattacharya <bhattacharya.ratnadeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memenpsf = { version = "0.1.0", path = "../../memenpsf" }
rand = "0.8.3"
crossbeam = "0.8.0"
futures = "0.3.13"